Went through the findbugs report and fixed a few of the reasonable "bugs". I didn't find anything serious, however. The notify() and wait() stuff may be bad, but I have not yet checked.